--- a/languages/languages.json
+++ b/languages/languages.json
@@ -2,7 +2,7 @@
   "de": "Deutsch",
   "es": "Español",
   "fr-fr": "Français",
-  "id": "Indonesia"
+  "id": "Indonesia",
   "ru": "Русский",
   "pt-br": "Português (Brasil)",
   "pt-pt": "Português (Europeu)",
